# alpaca-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/workflows/: ci.yml  github-pages.yml
crates/alpaca-core/: Cargo.toml  README.md
crates/alpaca-core/src/: auth.rs  decimal.rs  env.rs  error.rs  float.rs  integer.rs  lib.rs  pagination.rs  query.rs  validate.rs
crates/alpaca-core/tests/: public_api.rs  shared_primitives.rs
crates/alpaca-data/: Cargo.toml  README.md
crates/alpaca-data/src/: client.rs  error.rs  lib.rs  pagination.rs  symbols.rs  tests.rs
crates/alpaca-data/src/cache/: client.rs  mod.rs  state.rs  stats.rs
crates/alpaca-data/src/corporate_actions/: client.rs  enums.rs  mod.rs  model.rs  request.rs  response.rs
crates/alpaca-data/src/news/: client.rs  enums.rs  mod.rs  model.rs  request.rs  response.rs
crates/alpaca-data/src/options/: client.rs  convenience.rs  enums.rs  mod.rs  model.rs  request.rs  response.rs
crates/alpaca-data/src/stocks/: client.rs  convenience.rs  enums.rs  mod.rs  model.rs  request.rs  response.rs
crates/alpaca-data/tests/: corporate_actions_real_api.rs  news_real_api.rs  options_real_api.rs  stocks_real_api.rs
crates/alpaca-facade/: Cargo.toml  README.md
crates/alpaca-facade/src/: data.rs  lib.rs
crates/alpaca-facade/src/options/: mod.rs
crates/alpaca-facade/tests/: live.rs  request.rs  workspace_smoke.rs
crates/alpaca-http/: Cargo.toml  README.md
crates/alpaca-http/src/: auth.rs  client.rs  error.rs  lib.rs  meta.rs  observer.rs  rate_limit.rs  request.rs  retry.rs
crates/alpaca-http/tests/: client_pipeline.rs  client_retry.rs  live_support_foundation.rs  live_support_real_api.rs  live_support_smoke.rs  primitives.rs
crates/alpaca-mock/: Cargo.toml  README.md
crates/alpaca-mock/src/: app.rs  auth.rs  lib.rs  main.rs
crates/alpaca-mock/src/handlers/: account.rs  activities.rs  admin.rs  assets.rs  calendar.rs  clock.rs  health.rs  mod.rs  options_contracts.rs  orders.rs  portfolio_history.rs  positions.rs  watchlists.rs
crates/alpaca-mock/src/state/: account.rs  activities.rs  assets.rs  calendar.rs  clock.rs  executions.rs  market_data.rs  mod.rs  options_contracts.rs  positions.rs  watchlists.rs
crates/alpaca-mock/tests/: app_routes.rs  market_data_real_api.rs  order_ids.rs
crates/alpaca-option/: Cargo.toml  README.md
crates/alpaca-option/src/: analysis.rs  chain.rs  contract.rs  display.rs  error.rs  execution_quote.rs  expiration_selection.rs  lib.rs  liquidity.rs  market_structure.rs  numeric.rs  option_strategy.rs  payoff.rs  pricing.rs  probability.rs  rate.rs  snapshot.rs  types.rs  url.rs
crates/alpaca-option/src/math/: american.rs  bachelier.rs  barrier.rs  black76.rs  geometric_asian.rs  mod.rs
crates/alpaca-option/tests/: fixtures.rs  numeric_search.rs  public_api_boundaries.rs  strategy_payoff.rs
crates/alpaca-time/: Cargo.toml  README.md
crates/alpaca-time/src/: calendar.rs  chrono.rs  clock.rs  display.rs  error.rs  expiration.rs  lib.rs  range.rs  session.rs  types.rs
crates/alpaca-time/tests/: canonical_api.rs  contract_time_helpers.rs  fixtures.rs  interop_and_wrappers.rs  runtime_wrappers.rs
crates/alpaca-trade/: Cargo.toml  README.md
crates/alpaca-trade/examples/: mainline_mock_lifecycle.rs
crates/alpaca-trade/src/: client.rs  error.rs  lib.rs  tests.rs
crates/alpaca-trade/src/account/: client.rs  mod.rs  model.rs
crates/alpaca-trade/src/account_configurations/: client.rs  mod.rs  model.rs  request.rs
crates/alpaca-trade/src/activities/: client.rs  convenience.rs  mod.rs  model.rs  request.rs
crates/alpaca-trade/src/assets/: client.rs  mod.rs  model.rs  request.rs
crates/alpaca-trade/src/calendar/: client.rs  mod.rs  model.rs  request.rs
crates/alpaca-trade/src/clock/: client.rs  mod.rs  model.rs  request.rs
crates/alpaca-trade/src/options_contracts/: client.rs  mod.rs  model.rs  request.rs
crates/alpaca-trade/src/orders/: client.rs  convenience.rs  execution.rs  lifecycle.rs  mod.rs  model.rs  request.rs  results.rs
crates/alpaca-trade/src/portfolio_history/: client.rs  mod.rs  model.rs  request.rs
crates/alpaca-trade/src/positions/: client.rs  convenience.rs  mod.rs  model.rs  request.rs
crates/alpaca-trade/src/watchlists/: client.rs  mod.rs  model.rs  request.rs
crates/alpaca-trade/tests/: account_configurations_real_api.rs  account_real_api.rs  activities_api.rs  activities_mock_api.rs  activities_real_api.rs  assets_fixed_income_real_api.rs  assets_real_api.rs  calendar_real_api.rs  clock_real_api.rs  mainline_api.rs  mainline_mock_api.rs  mainline_real_api.rs  options_contracts_real_api.rs  order_support_contract.rs  orders_api.rs  orders_mock_api.rs  orders_mock_contract.rs  orders_real_api.rs  portfolio_history_real_api.rs  positions_api.rs  positions_mock_api.rs  positions_mock_contract.rs  positions_real_api.rs  replacement_race_mock.rs  trading_contract_api.rs  watchlists_real_api.rs
crates/alpaca-trade/tests/support/: orders.rs  targets.rs  trade_state.rs
docs/: api-coverage.md  authentication.md  companion-packages.md  examples.md  getting-started.md  index.md  installation.md  mock-server.md  project-structure.md  release-checklist.md  testing.md  trade-mainline.md  troubleshooting.md
docs/api-coverage/: market-data.md  trading.md
docs/reference/: account-configurations.md  account.md  activities.md  alpaca-core.md  alpaca-data.md  alpaca-facade.md  alpaca-http.md  alpaca-mock.md  alpaca-option.md  alpaca-rest-http.md  alpaca-time.md  alpaca-trade.md  assets.md  calendar-clock.md  corporate-actions.md  index.md  news.md  options-contracts.md  options-data.md  orders.md  portfolio-history.md  positions.md  stocks.md  watchlists.md
fixtures/: README.md  catalog.json
fixtures/calendar/: trading-days.json
fixtures/display/: display-formats.json
scripts/: install-alpaca-mock-service.sh
spec/: README.md
website/: build-site.mjs  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
(+127 files in other folders)
