[workspace]
members = [
  "crates/alpaca-core",
  "crates/alpaca-http",
  "crates/alpaca-data",
  "crates/alpaca-trade",
  "crates/alpaca-mock",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"

[workspace.dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.41", default-features = false, features = ["serde-with-arbitrary-precision", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
url = "2"
