[workspace]
members = [
  "crates/alpaca-core",
  "crates/alpaca-http",
  "crates/alpaca-data",
  "crates/alpaca-trade",
  "crates/alpaca-mock",
]
resolver = "2"

[workspace.package]
version = "0.23.2"
edition = "2024"
authors = ["Weiming Zhai <wmzhai@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wmzhai/alpaca-rust"
homepage = "https://wmzhai.github.io/alpaca-rust/"

[workspace.dependencies]
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.41", default-features = false, features = ["serde-with-arbitrary-precision", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
url = "2"
