[package]
name = "alpaca-facade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
alpaca-core = { path = "../alpaca-core" }
alpaca-data = { path = "../alpaca-data" }
alpaca-trade = { path = "../alpaca-trade" }
alpaca-time = { path = "../alpaca-time" }
alpaca-option = { path = "../alpaca-option" }
anyhow.workspace = true
rust_decimal.workspace = true
serde.workspace = true
tokio.workspace = true
