[package]
name = "alpaca-facade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/alpaca-facade"
readme = "README.md"
description = "High-level convenience facades built on top of the alpaca-rust workspace crates"
keywords = ["alpaca", "sdk", "market-data", "trading", "options"]
categories = ["api-bindings", "asynchronous"]

[lib]
path = "src/lib.rs"

[dependencies]
alpaca-core = { path = "../alpaca-core", version = "0.24.6" }
alpaca-data = { path = "../alpaca-data", version = "0.24.6" }
alpaca-trade = { path = "../alpaca-trade", version = "0.24.6" }
alpaca-time = { path = "../alpaca-time", version = "0.24.6" }
alpaca-option = { path = "../alpaca-option", version = "0.24.6" }
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
rust_decimal.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
dotenvy.workspace = true
