[package]
name = "alpaca-http"
version.workspace = true
edition.workspace = true

[dependencies]
alpaca-core = { path = "../alpaca-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
dotenvy.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
