[package]
name = "alpaca-mock"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
alpaca-data = { path = "../alpaca-data" }
alpaca-trade = { path = "../alpaca-trade" }
axum.workspace = true
dotenvy.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
alpaca-core = { path = "../alpaca-core" }
alpaca-http = { path = "../alpaca-http" }
dotenvy.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
