[package]
name = "alpaca-mock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/alpaca-mock"
readme = "README.md"
description = "Executable mock server for alpaca-rust trading and market-data flows"
keywords = ["alpaca", "mock-server", "trading", "testing"]
categories = ["api-bindings", "development-tools"]

[dependencies]
alpaca-core = { path = "../alpaca-core", version = "0.24.6" }
alpaca-data = { path = "../alpaca-data", version = "0.24.6" }
alpaca-trade = { path = "../alpaca-trade", version = "0.24.6" }
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
alpaca-http = { package = "alpaca-rest-http", path = "../alpaca-http", version = "0.24.6" }
dotenvy.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
