[package]
name = "alpaca-time"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
serde.workspace = true
serde_json.workspace = true
