[package]
name = "alpaca-trade"
version.workspace = true
edition.workspace = true

[dependencies]
alpaca-core = { path = "../alpaca-core" }
alpaca-http = { path = "../alpaca-http" }
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
dotenvy.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
