[package]
name = "alpaca-trade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/alpaca-trade"
readme = "README.md"
description = "Rust client for the Alpaca Trading HTTP API"
keywords = ["alpaca", "trading", "paper-trading", "stocks"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
alpaca-core = { path = "../alpaca-core", version = "0.24.7" }
alpaca-http = { package = "alpaca-rest-http", path = "../alpaca-http", version = "0.24.7" }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = "0.10"
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
ts-rs = { version = "11.1", features = ["chrono-impl", "serde-json-impl", "serde-compat"] }

[dev-dependencies]
axum.workspace = true
chrono.workspace = true
chrono-tz = "0.10"
alpaca-data = { path = "../alpaca-data", version = "0.24.7" }
alpaca-mock = { path = "../alpaca-mock", version = "0.24.7" }
dotenvy.workspace = true
fs2 = "0.4"
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
